2007-12-04  Dieter Lunn <coder2000@gmail.com> 
	* Added password field to application for authentication purposes.
	
