@@ -60,6 +60,9 @@
     <File name="idn/StringprepException.cs" subtype="Code" buildaction="Compile" />
     <File name="Logger.cs" subtype="Code" buildaction="Compile" />
     <File name="states/SASLState.cs" subtype="Code" buildaction="Compile" />
+    <File name="common/SASL/MD5Processor.cs" subtype="Code" buildaction="Compile" />
+    <File name="core/SASL/Challenge.cs" subtype="Code" buildaction="Compile" />
+    <File name="core/SASL/Response.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
